--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(Raster)
 
 set(EXE_NAME Raster)
 
+option(RASTER_BUILD_EXE "Build Raster executable" ON)
+
 find_package(OpenMP)
 
 set(HEADER_FILES
@@ -18,7 +20,6 @@ set(SRC_FILES
   src/renderer/render.cpp
   src/renderer/loader.cpp
   src/renderer/scene.cpp
-  src/main.cpp
 )
 
 set (BUILD_INCLUDES
@@ -35,13 +36,18 @@ set (BUILD_INCLUDES
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/mikktspace)
 
-add_executable(${EXE_NAME} ${SRC_FILES} ${HEADER_FILES})
-set_property(TARGET ${EXE_NAME} PROPERTY CXX_STANDARD 11)
-set_property(TARGET ${EXE_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
+if(RASTER_BUILD_EXE)
+  add_executable(${EXE_NAME} ${SRC_FILES} ${HEADER_FILES} src/main.cpp)
+else()
+  add_library(${PROJECT_NAME} ${SRC_FILES} ${HEADER_FILES})
+endif()
 
-target_include_directories(${EXE_NAME} PRIVATE ${BUILD_INCLUDES})
-target_precompile_headers(${EXE_NAME} PRIVATE include/pch.h)
-target_link_libraries(${EXE_NAME} PRIVATE mikktspace)
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
+set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${BUILD_INCLUDES})
+target_precompile_headers(${PROJECT_NAME} PRIVATE include/pch.h)
+target_link_libraries(${PROJECT_NAME} PRIVATE mikktspace)
 
 if(OpenMP_FOUND)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
@@ -50,9 +56,9 @@ endif()
 
 if(MSVC)
   add_definitions(-D_CRT_SECURE_NO_WARNINGS)
-  set_directory_properties(PROPERTIES VS_STARTUP_PROJECT ${EXE_NAME})
+  set_directory_properties(PROPERTIES VS_STARTUP_PROJECT ${PROJECT_NAME})
 else()
-    target_compile_options(${EXE_NAME} PRIVATE -Wall -Wextra -pedantic)
+    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
 endif()
 
-install(TARGETS ${EXE_NAME} RUNTIME DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
